Detect default layout with xklavier

Try to read the default layout by connecting to the X server.

https://bugzilla.gnome.org/show_bug.cgi?id=572765